# india-dcf

./: .gitignore  README.md  pyproject.toml
india_dcf/: __init__.py  cli.py  dcf.py  fetch.py  financials.py  params.py  wacc.py
tests/: test_india_dcf.py
