[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "india-dcf"
version = "1.0.0"
description = "India-calibrated DCF valuation engine for NSE/BSE listed companies"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Bhupendra Gurjar", email = "bgurjar05.bg@gmail.com" }]
keywords = ["dcf", "valuation", "india", "nse", "bse", "investment-banking", "wacc", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
india-dcf = "india_dcf.cli:main"

[project.urls]
Homepage = "https://github.com/bhupendra05/india-dcf"
Repository = "https://github.com/bhupendra05/india-dcf"
Issues = "https://github.com/bhupendra05/india-dcf/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
